- Content Provider 추가  : 날짜별 기록 가져오기  : 전체 기록 가져오기  : 총 걸음횟수 가져오기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
         android:name="android.hardware.sensor.stepcounter"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-<application
-        android:name=".PenometerApplication"
+    <application
+        android:name=".PedometerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,32 +31,35 @@
         </activity>
 
 
-    <receiver android:name=".broadcastreceiver.BootReceiver">
-        <intent-filter>
-            <action android:name="android.intent.action.BOOT_COMPLETED"/>
-        </intent-filter>
-    </receiver>
-    <receiver android:name=".broadcastreceiver.AppUpdatedReceiver">
-        <intent-filter>
-            <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
-        </intent-filter>
-    </receiver>
+        <receiver android:name=".broadcastreceiver.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcastreceiver.AppUpdatedReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
 
-    <service
-        android:name=".service.PedometerService"/>
+        <service android:name=".service.PedometerService" />
 
-    <service
-        android:name=".service.PedometerSystemOverlayService"
-        android:exported="false" />
+        <service
+            android:name=".service.PedometerSystemOverlayService"
+            android:exported="false" />
 
-    <receiver
-        android:name=".broadcastreceiver.ShutdownRecevier">
-        <intent-filter>
-            <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
-            <action android:name="de.j4velin.ACTION_SHUTDOWN"/>
-        </intent-filter>
-    </receiver>
+        <provider
+            android:name=".database.PedometerContentProvider"
+            android:authorities="@string/content_authority"
+            android:exported="false"/>
 
-</application>
+        <receiver android:name=".broadcastreceiver.ShutdownRecevier">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
+                <action android:name="de.j4velin.ACTION_SHUTDOWN" />
+            </intent-filter>
+        </receiver>
+
+    </application>
 
 </manifest>
