--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
             minifyEnabled false
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -38,16 +42,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile supportDependencies.appCompat
+    compile supportDependencies.design
+    compile supportDependencies.support
+    compile supportDependencies.recyclerView
+    compile butterknife
+    annotationProcessor butterknifeProcesser
 
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.naver.maps.open:naver-map-api:2.1.2@aar'
     compile 'gun0912.ted:tedpermission:1.0.2'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
 repositories {
