--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".service.PedometerService" />
+        <service android:name=".service.step.PedometerService" />
 
         <service
             android:name=".service.PedometerSystemOverlayService"
